# POD_Analysis_for_vortex_shedding_data

./: .gitignore  LICENSE  README.md  advanced_modal_analysis.ipynb  main.py  pod_analysis.ipynb  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_complete_workflow.py  02_dmd_analysis.py  03_spod_analysis.py
outputs/notebook/: summary.json
src/pod_analysis/: __init__.py  advanced.py  analysis.py  cli.py  core.py  data.py  demo_data.py  dmd.py  mode_selection.py  plotting.py  py.typed  reporting.py  spod.py  validation.py  workflow.py
src/pythonproject5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_advanced.py  test_analysis.py  test_core.py  test_data.py  test_demo_data.py  test_dmd.py  test_mode_selection.py  test_reporting.py  test_spod.py  test_validation.py  test_workflow.py
