[project]
name = "pythonproject5"
version = "0.1.0"
description = "Production-grade POD analysis toolkit for Von Karman vortex street data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
pod-analyze = "pod_analysis.cli:main"

[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
